<package format="2">
  <name>clbfet</name>
  <version>0.0.1</version>
  <description>
    LB-FBLC-CLBF-ET-MPC controller for quadrotors
  </description>
  <author>hjl</author>
  <maintainer email="944748339@qq.com">hjl</maintainer>
  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>message_generation</build_depend>
  <build_depend>actionlib_msgs</build_depend>
  <exec_depend>message_runtime</exec_depend>
  <exec_depend>actionlib_msgs</exec_depend>

  <depend>dynamic_reconfigure</depend>
  <depend>roscpp</depend>
  <depend>rospy</depend>
  <depend>std_msgs</depend>
  <depend>nav_msgs</depend>

</package>
